# GeoCLUSTER

./: .dockerignore  .gitignore  DISCLAIMER.md  LICENSE.md  README.html  README.md  afterinstall.sh  apache-config.conf  appspec.yml  dockerfile  geocluster.ssl.conf  initialArchiecture.md  requirements.txt  requrements2.txt
API/: .env  .gitignore  LICENSE.md  README.html  README.md  pyproject.toml
API/src/geocluster_api/: main.py  types.py
API/src/geocluster_api/geocluster_code/: clgs.py  dash locals.py  paths.py
API/src/geocluster_api/geocluster_code/data/: decompress_hdf5.py
API/src/geocluster_api/geocluster_code/econ/: clg_tea_module.py  econ_support.py  econ_wrapper.py
API/src/geocluster_api/geocluster_code/sbt/: plot_sbt.py  sbt_utils.py  sbt_v27.py
API/tests/: main_test.py
API/tests/data/: Pout.npy  Tout.npy  kWe.npy  kWt.npy  tea_results_1.json  tea_results_2.json  times.npy
dash_app/: .env  COAXIAL_DEBUG_NOTES.md  README.md  SBT Python v21.py  app.py  borehole_geometry.html  clg_tea_module.py  clgs.py  conversions_ui.py  dropdowns.py  econ_support.py  info_popups.py  memory_profile_output.txt  paths.py  plot_sbt.py  plot_sbt_plotly.py  plots.py  plots_support.py  reader.py  requirements.txt  run.py  sbt.py  sbt_coaxial_support.py  sbt_utils.py  sbt_v27.py  show_hide_element_fixed.py  sliders.py  tables.py  test.py  test_co2_quick.py  test_coaxial_params.py  test_coaxial_quick.py  test_sbt.py  test_simple.py  test_v27.py  testing_sbt.ipynb  text.py  unit_conversions.py  unit_preferences.py  utils_labels.py  (+2 more)
dash_app/assets/: geocluster.js  (+1 more)
(+32 files in other folders)
